# WmsRallyMobile

./: README.md  config.py  database.py  main.py  menu.py  pyproject.toml  requirements.txt  separar.py
routes/: abastecimento.py  abastecimentoV2.py  ajustarContagemEnd.py  ajustarEndereco.py  armazenarEtiqueta.py  armazenarEtiquetaV2.py  atribuirEtiqueta.py  buscarBonus.py  buscarCarregamento.py  buscarDevolucao.py  buscarEtiquetaV2.py  buscarMultiplosDist.py  buscarPedido.py  buscarPedidoMultiplos.py  buscarPedidoUnico.py  buscarPedidosDIst.py  buscarPedidosVar.py  buscarTransferenciaDevolucao.py  cadastrarCodbarra.py  conferirBonus.py  configuracoes.py  consultarProdutoEndereco.py  contagemInventario.py  contagemInventarioRotativo.py  contagemInventarioV2.py  enderecarBonus.py  enderecarProduto.py  guardarBonus.py  main.py  menu.py  osAvulsa.py  osAvulsaEntrada.py  osAvulsaSaida.py  separar.py  separarAbastecimento.py  separarAbastecimentoV2.py  separarCarregamento.py  separarDevolucao.py  separarMultiplosPedidos.py  separarPedido.py  (+6 more)
routes/config/: config.py
