# pyproject.toml

[project]
name        = "Wms Mobile"
version     = "1.3.0"
description = "App móvel do WMS Rally"
authors     = ["Thalisson Manoel", "Joab Moura"]
readme      = "README.md"
license     = { file = "LICENSE" }

[project.urls]
"Homepage"    = "https://github.com/seuusuario/wmsrallymobile"
"Bug Tracker" = "https://github.com/seuusuario/wmsrallymobile/issues"

[tool.flet.android]
versionCode = 1
splitPerAbi = false
icon = "assets/icon.png"

[tool.flet.flutter.dependencies]
window_to_front = "0.0.3"
# Adicione outras dependências Flutter/Dart aqui, se necessário

[tool.flet.flutter.pubspec.dependency_overrides]
webview_flutter_android = "4.10.1"